--- a/features/index.html
+++ b/features/index.html
@@ -1520,7 +1520,7 @@ For more information check the <a href="../settings/#stub-generation">stubs sett
 </tr>
 <tr>
 <td>ai</td>
-<td>add-import-to-namespace</td>
+<td>add-missing-import</td>
 <td>Add import to namespace</td>
 <td><code>[file-uri,row,col[,name]]</code></td>
 <td>✅</td>
@@ -1549,6 +1549,14 @@ For more information check the <a href="../settings/#stub-generation">stubs sett
 <td><code>[file-uri,row,col]</code></td>
 <td>✅</td>
 <td></td>
+</tr>
+<tr>
+<td>ck</td>
+<td>cycle-keyword-auto-resolve</td>
+<td>Cycle keyword auto-resolve</td>
+<td><code>[file-uri,row,col]</code></td>
+<td>✅</td>
+<td><a href="../images/features/cycle-keyword-auto-resolve.gif"><img alt="Screen recording of Cycle keyword auto resolve" src="../images/features/cycle-keyword-auto-resolve.gif" /></a></td>
 </tr>
 <tr>
 <td>cn</td>
@@ -1719,6 +1727,22 @@ For more information check the <a href="../settings/#stub-generation">stubs sett
 <td><a href="../images/features/promote-fn.gif"><img alt="Screen recording of Promote fn to defn" src="../images/features/promote-fn.gif" /></a></td>
 </tr>
 <tr>
+<td>rr</td>
+<td>replace-refer-all-with-refer</td>
+<td>Replace ':refer :all' with ':refer [...]'</td>
+<td><code>[file-uri,row,col,refers]</code></td>
+<td>✅</td>
+<td><a href="../images/features/replace-refer-all-with-refer.gif"><img alt="Screen recording of Replace refer all with refer" src="../images/features/replace-refer-all-with-refer.gif" /></a></td>
+</tr>
+<tr>
+<td>ra</td>
+<td>replace-refer-all-with-alias</td>
+<td>Replace ':refer :all' with alias</td>
+<td><code>[file-uri,row,col]</code></td>
+<td>✅</td>
+<td><a href="../images/features/replace-refer-all-with-alias.gif"><img alt="Screen recording of Replace refer all with alias" src="../images/features/replace-refer-all-with-alias.gif" /></a></td>
+</tr>
+<tr>
 <td>rk</td>
 <td>restructure-keys</td>
 <td>Restructure keys</td>
@@ -1728,7 +1752,7 @@ For more information check the <a href="../settings/#stub-generation">stubs sett
 </tr>
 <tr>
 <td>sc</td>
-<td>change-collection</td>
+<td>change-coll</td>
 <td>Switch collection to <code>{}, (), #{}, []</code></td>
 <td><code>[file-uri,row,col,"map"/"list"/"set"/"vector"]</code></td>
 <td>✅</td>
@@ -1805,7 +1829,7 @@ For more information check the <a href="../settings/#stub-generation">stubs sett
 <div class="md-source-date">
   <small>
     
-      Last update: <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-date">November 14, 2022</span>
+      Last update: <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-date">June 25, 2023</span>
     
   </small>
 </div>
