--- a/CHANGELOG/index.html
+++ b/CHANGELOG/index.html
@@ -2188,8 +2188,12 @@
 <li>Bump clj-kondo to <code>2023.06.02-20230621.091643-10</code>.</li>
 <li>Improve support for ClojureDart <code>.cljd</code> files. #1589</li>
 <li>Slightly reduce OutOfMemory exceptions that may happen with the JVM version.</li>
+<li>Support ignore unused-public-vars via <code>:linters :clojure-lsp/unused-public-var :exclude-when-contains-meta</code> clj-kondo setting.</li>
+<li>Fix restructure-keys when map has an <code>:or</code>. #1583</li>
+<li>Bump lsp4clj to <code>1.8.0</code>.</li>
+<li>Add post startup tasks progress feedbacks, like "Generating stubs", "Analyzing JDK source" and "Fetching Clojars".</li>
 <li>
-<p>Support ignore unused-public-vars via <code>:linters :clojure-lsp/unused-public-var :exclude-when-contains-meta</code> clj-kondo setting.</p>
+<p>Bump cljfmt to <code>0.10.6</code>. #1605</p>
 </li>
 <li>
 <p>Editor</p>
@@ -2199,8 +2203,9 @@
 <li>Improve <code>:paths-ignore-regex</code> to ignore features avoiding impact in huge files that are intented to be excluded.</li>
 <li>Fixed semantic-tokens for full qualified namespace</li>
 <li>Add <code>score</code> to completion items for a better completion client sorting. #1595</li>
+<li>Revamp keyword completion. #1599</li>
 <li>
-<p>Revamp keyword completion. #1599</p>
+<p>Avoid LSP errors when cleaning a file without namespaces. #1603</p>
 </li>
 <li>
 <p>API/CLI</p>
@@ -3534,7 +3539,7 @@ when multiple files are changed at same time (rename, iedit, etc).</li>
 <div class="md-source-date">
   <small>
     
-      Last update: <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-date">June 26, 2023</span>
+      Last update: <span class="git-revision-date-localized-plugin git-revision-date-localized-plugin-date">July 1, 2023</span>
     
   </small>
 </div>
